hard-gists/0115e0ce312f26ff59f4fbf4f5821ca2/run.log
=== Docker Run Log for 0115e0ce312f26ff59f4fbf4f5821ca2 ===
Started at: Mi 29. Okt 11:19:47 CET 2025

[2025-10-29 11:19:48] START: Running container for 0115e0ce312f26ff59f4fbf4f5821ca2
[2025-10-29 11:19:48] SUCCESS: Container 5b7a399bf96ef3849bb5018896d32dce8b5e35d9aa696b9694711eace10bfb2b started for 0115e0ce312f26ff59f4fbf4f5821ca2
=== Container logs for 0115e0ce312f26ff59f4fbf4f5821ca2 ===
  File "/snippet.py", line 44
    print "opening"
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 0115e0ce312f26ff59f4fbf4f5821ca2 ===
[2025-10-29 11:19:50] INFO: Container 5b7a399bf96ef3849bb5018896d32dce8b5e35d9aa696b9694711eace10bfb2b has stopped
